--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -944,7 +944,8 @@
       "slides": "スライド",
       "data": "データ",
       "docs": "ドキュメント",
-      "people": "人",
+      "canvas": "キャンバス",
+      "video": "ビデオ",
       "research": "リサーチ"
     },
     "styles": {
@@ -1153,17 +1154,29 @@
         "8": "エスカレーション手順を含むセキュリティインシデント対応計画を作成",
         "9": "ブランドとコンテンツの包括的なスタイルガイドを作成"
       },
-      "people": {
-        "0": "サンフランシスコベイエリアのシリーズB以上のAI/MLスタートアップで、10年以上の経験とエンジニアリングチームのスケーリング実績があるエンジニアリングVP候補を探す",
-        "1": "最近シリーズA/B資金調達を行ったB2B SaaS企業（ARR $10M-$50M）のCMOのリードリストを構築 - メールパターンとテックスタックを含む",
-        "2": "トップ暗号プロジェクトでSolidity/Rust経験を持つシニアブロックチェーンエンジニアを調査、ドバイまたはシンガポールへの転勤可能",
-        "3": "過去6ヶ月間に$2M-$15Mを調達したエンタープライズAIのシード-シリーズAスタートアップの技術創業者の見込みリストを生成",
-        "4": "FAANGまたはユニコーン出身で5-10年の経験があり、0-1製品開発に精通したフィンテック企業のシニアプロダクトマネージャーを特定",
-        "5": "$500K以上のIT予算でクラウド移行を計画している中規模ヘルスケアIT企業（500-5000人）のCIOとエンジニアリングVPを探す",
-        "6": "前年比100%以上の成長を示すB2B SaaS企業で、$100K以上の取引を7年以上クロージングし、PLG経験があるセールスVPを調査",
-        "7": "2024年に数百万ドルの予算でAIインフラを積極的に実装しているエンタープライズ企業のCTOリストを構築",
-        "8": "モバイルファーストのコンシューマーアプリ経験と100万以上のユーザーポートフォリオを持つシニアUX/UIデザイナーを探す、積極的に探しているか機会にオープン",
-        "9": "Kubernetes/Terraformの専門知識を持ち、1000万以上のユーザー向けインフラを構築した5-8年の経験があるクラウドネイティブスタートアップのシニアDevOpsエンジニアを特定"
+      "canvas": {
+        "0": "ネオンアクセントを備えた未来的な都市スカイラインを特徴とするテックスタートアップ向けのソーシャルメディアバナーを作成",
+        "1": "「Morning Ritual」というコーヒーブランドのミニマリストロゴをアースカラーでデザイン",
+        "2": "この製品写真を編集して背景を削除し、ソフトなグラデーションを追加",
+        "3": "モダンなフラットデザインで再生可能エネルギーのメリットを示すインフォグラフィックを作成",
+        "4": "AI意識についてのSF小説のブックカバーをサイバーパンクの美学でデザイン",
+        "5": "太字のテキストオーバーレイを使用した生産性のヒントに関するビデオ用のYouTubeサムネイルを作成",
+        "6": "ミレニアル世代をターゲットにしたラグジュアリーファッションブランドのムードボードを作成",
+        "7": "エレガントなフローラルパターンとゴールドアクセントを使用したウェディング招待状をデザイン",
+        "8": "ヴィンテージフィルムルックでグレインと暖かいトーンを持つポートレート写真を編集",
+        "9": "70年代のサイケデリックな雰囲気の音楽フェスティバルのポスターデザインを作成"
+      },
+      "video": {
+        "0": "製品ショーケースビデオを作りたい - 製品写真をアップロードするので、滑らかに回転するアニメーションにして",
+        "1": "私のポートレートを壮大な冒険シーンに変換して - 写真を送るので、シネマティックな風景を歩く私を作って",
+        "2": "平和な日本庭園で優しく舞い散る桜の花びらの自然ビデオを生成",
+        "3": "光るパーティクルが渦を巻いてスローモーションで外側に爆発する抽象ビデオを作成",
+        "4": "製品画像があります - ソフトな影と微妙な回転のプレミアムフローティングアニメーションを作成して",
+        "5": "私のセルフィーを取って、周りに魔法の輝きとシネマティックな照明効果でアニメーション化して",
+        "6": "ゴールデンアワーの霧深い山々を飛行するドラマチックなシネマティックショットを生成",
+        "7": "有機的な形状に流れて変形する液体金属のループビデオを作成",
+        "8": "私の写真をアップロードします - 背景を光線と泡のある水中シーンに変換して",
+        "9": "飛行する車、ネオンライト、雨に濡れた通りのある未来都市のビデオを生成"
       },
       "research": {
         "0": "量子コンピューティングの新興トレンドと潜在的なビジネスアプリケーションを分析",
