--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -944,7 +944,8 @@
       "slides": "幻灯片",
       "data": "数据",
       "docs": "文档",
-      "people": "人物",
+      "canvas": "画布",
+      "video": "视频",
       "research": "研究"
     },
     "styles": {
@@ -1153,17 +1154,29 @@
         "8": "编写包含升级程序的安全事件响应计划",
         "9": "创建涵盖品牌和内容的全面风格指南"
       },
-      "people": {
-        "0": "在旧金山湾区的 B 轮以上 AI/ML 初创公司中寻找具有 10 年以上经验并拥有扩展工程团队成功记录的工程副总裁候选人",
-        "1": "构建最近获得 A/B 轮融资的 B2B SaaS 公司（ARR $1000 万-$5000 万）的 CMO 潜在客户列表 - 包括电子邮件模式和技术栈",
-        "2": "研究在顶级加密项目中具有 Solidity/Rust 经验的高级区块链工程师，愿意搬迁到迪拜或新加坡",
-        "3": "生成过去 6 个月内筹集了 $200 万-$1500 万的企业 AI 种子-A 轮初创公司的技术创始人潜在客户列表",
-        "4": "识别在金融科技公司中具有 5-10 年经验、来自 FAANG 或独角兽公司、精通 0-1 产品开发的高级产品经理",
-        "5": "在中型医疗 IT 公司（500-5000 名员工）中寻找具有 $50 万以上 IT 预算并计划云迁移的 CIO 和工程副总裁",
-        "6": "研究在 B2B SaaS 公司中显示 100% 以上同比增长、拥有 7 年以上完成 $10 万以上交易经验和 PLG 经验的销售副总裁",
-        "7": "构建在 2024 年积极实施 AI 基础设施、拥有数百万美元预算的企业公司 CTO 列表",
-        "8": "寻找具有移动优先消费者应用经验和 100 万以上用户作品集的高级 UX/UI 设计师，积极寻找或对机会开放",
-        "9": "识别在云原生初创公司中具有 Kubernetes/Terraform 专业知识、拥有 5-8 年为 1000 万以上用户构建基础设施经验的高级 DevOps 工程师"
+      "canvas": {
+        "0": "为我的科技创业公司创建一个社交媒体横幅，展示未来主义城市天际线和霓虹灯点缀",
+        "1": "使用大地色调为名为「Morning Ritual」的咖啡品牌设计极简主义标志",
+        "2": "编辑此产品照片以移除背景并添加柔和渐变",
+        "3": "用现代扁平设计创建一个展示可再生能源优势的信息图",
+        "4": "为一部关于 AI 意识的科幻小说设计带有赛博朋克美学的书籍封面",
+        "5": "为一个关于生产力技巧的视频制作带有粗体文字叠加的 YouTube 缩略图",
+        "6": "为针对千禧一代的奢侈时尚品牌创建情绪板",
+        "7": "设计带有优雅花卉图案和金色点缀的婚礼请柬",
+        "8": "编辑我的肖像照片，使其具有带颗粒和暖色调的复古胶片效果",
+        "9": "为音乐节创建带有 70 年代迷幻氛围的海报设计"
+      },
+      "video": {
+        "0": "我想创建一个产品展示视频 - 我会上传产品照片，你将其动画化平滑旋转",
+        "1": "将我的肖像转换为史诗冒险场景 - 我会发送我的照片，你让我走过电影般的风景",
+        "2": "生成樱花花瓣在宁静日本花园中轻轻飘落的自然视频",
+        "3": "创建发光粒子旋转在一起并以慢动作向外爆炸的抽象视频",
+        "4": "我有产品图片 - 创建带有柔和阴影和微妙旋转的高级悬浮动画",
+        "5": "拍下我的自拍并用魔法火花和电影般的灯光效果在我周围制作动画",
+        "6": "生成在黄金时刻飞越雾蒙蒙山脉的戏剧性电影镜头",
+        "7": "创建液态金属流动并变形为有机形状的循环视频",
+        "8": "我会上传我的照片 - 将背景转换为带有光线和气泡的水下场景",
+        "9": "生成带有飞行汽车、霓虹灯和雨湿街道的未来城市景观视频"
       },
       "research": {
         "0": "分析量子计算的新兴趋势和潜在商业应用",
