--- a/frontend/translations/de.json
+++ b/frontend/translations/de.json
@@ -945,7 +945,8 @@
       "slides": "Folien",
       "data": "Daten",
       "docs": "Dokumente",
-      "people": "Personen",
+      "canvas": "Leinwand",
+      "video": "Video",
       "research": "Recherche"
     },
     "styles": {
@@ -1064,17 +1065,29 @@
         "8": "Schreibe einen Sicherheitsvorfall-Reaktionsplan mit Eskalationsverfahren",
         "9": "Erstelle einen umfassenden Styleguide für Marke und Content"
       },
-      "people": {
-        "0": "Finde VP of Engineering-Kandidaten bei Series B+ KI/ML-Startups im San Francisco Bay Area mit 10+ Jahren Erfahrung und bewährter Erfolgsbilanz beim Skalieren von Engineering-Teams",
-        "1": "Erstelle eine Lead-Liste von CMOs bei B2B-SaaS-Unternehmen (10-50 Mio. $ ARR), die kürzlich Series A/B-Finanzierung erhalten haben - inklusive E-Mail-Mustern und Tech-Stack",
-        "2": "Recherchiere Senior Blockchain Engineers mit Solidity/Rust-Erfahrung bei Top-Krypto-Projekten, offen für Umzug nach Dubai oder Singapur",
-        "3": "Generiere eine Prospect-Liste von technischen Gründern bei Seed-Series A-Startups im Enterprise-KI-Bereich, die in den letzten 6 Monaten 2-15 Mio. $ erhalten haben",
-        "4": "Identifiziere Senior Product Manager bei Fintech-Unternehmen mit 5-10 Jahren Erfahrung von FAANG oder Unicorns, versiert in 0-1-Produktentwicklung",
-        "5": "Finde CIOs und VP Engineering bei mittelständischen Healthcare-IT-Unternehmen (500-5000 Mitarbeiter) mit 500K+ $ IT-Budgets, die Cloud-Migration planen",
-        "6": "Recherchiere VP Sales bei B2B-SaaS-Unternehmen mit 100%+ YoY-Wachstum, mit 7+ Jahren Erfahrung im Abschluss von 100K+ $ Deals und PLG-Erfahrung",
-        "7": "Erstelle eine Liste von CTOs bei Enterprise-Unternehmen, die aktiv KI-Infrastruktur mit Multi-Millionen-Dollar-Budgets in 2024 implementieren",
-        "8": "Finde Senior UX/UI Designer mit Mobile-First Consumer-App-Erfahrung und 1M+ Nutzer-Portfolios, aktiv suchend oder offen für Möglichkeiten",
-        "9": "Identifiziere Senior DevOps Engineers bei Cloud-Native-Startups mit Kubernetes/Terraform-Expertise und 5-8 Jahren Erfahrung beim Aufbau von Infrastruktur für 10M+ Nutzer"
+      "canvas": {
+        "0": "Erstelle ein Social-Media-Banner für mein Tech-Startup mit einer futuristischen Stadtsilhouette und Neon-Akzenten",
+        "1": "Designe ein minimalistisches Logo für eine Kaffeemarke namens 'Morning Ritual' in Erdtönen",
+        "2": "Bearbeite dieses Produktfoto, um den Hintergrund zu entfernen und einen sanften Verlauf hinzuzufügen",
+        "3": "Erstelle eine Infografik über die Vorteile erneuerbarer Energien im modernen Flat-Design",
+        "4": "Designe ein Buchcover für einen Sci-Fi-Roman über KI-Bewusstsein im Cyberpunk-Stil",
+        "5": "Erstelle ein YouTube-Thumbnail für ein Video über Produktivitätstipps mit fetter Textüberlagerung",
+        "6": "Erstelle ein Moodboard für eine Luxus-Modemarke für Millennials",
+        "7": "Designe eine Hochzeitseinladung mit eleganten Blumenmustern und Goldakzenten",
+        "8": "Bearbeite mein Porträtfoto für einen Vintage-Film-Look mit Körnung und warmen Tönen",
+        "9": "Erstelle ein Posterdesign für ein Musikfestival im psychedelischen 70er-Jahre-Stil"
+      },
+      "video": {
+        "0": "Ich möchte ein Produktvideo erstellen - ich lade mein Produktfoto hoch und du animierst es mit sanfter Rotation",
+        "1": "Verwandle mein Porträt in eine epische Abenteuerszene - ich sende mein Foto und du lässt mich durch eine cinematische Landschaft laufen",
+        "2": "Generiere ein Naturvideo von sanft fallenden Kirschblüten in einem friedlichen japanischen Garten",
+        "3": "Erstelle ein abstraktes Video von leuchtenden Partikeln, die sich zusammenwirbeln und in Zeitlupe nach außen explodieren",
+        "4": "Ich habe ein Produktbild - erstelle eine Premium-Schwebeanimation mit weichen Schatten und subtiler Rotation",
+        "5": "Nimm mein Selfie und animiere es mit magischen Funken und cinematischen Lichteffekten um mich herum",
+        "6": "Generiere eine dramatische cinematische Aufnahme, die durch neblige Berge bei Sonnenuntergang fliegt",
+        "7": "Erstelle ein Loop-Video von flüssigem Metall, das fließt und sich in organische Formen verwandelt",
+        "8": "Ich lade mein Foto hoch - verwandle den Hintergrund in eine Unterwasserszene mit Lichtstrahlen und Blasen",
+        "9": "Generiere ein futuristisches Stadtbild-Video mit fliegenden Autos, Neonlichtern und regennassen Straßen"
       },
       "research": {
         "0": "Analysiere aufkommende Trends im Quantencomputing und potenzielle Geschäftsanwendungen",
