--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -952,7 +952,8 @@
       "slides": "Slides",
       "data": "Data",
       "docs": "Docs",
-      "people": "People",
+      "canvas": "Canvas",
+      "video": "Video",
       "research": "Research"
     },
     "styles": {
@@ -1161,17 +1162,29 @@
         "8": "Write a security incident response plan with escalation procedures",
         "9": "Create a comprehensive style guide for brand and content"
       },
-      "people": {
-        "0": "Find VP of Engineering candidates at Series B+ AI/ML startups in San Francisco Bay Area with 10+ years experience and proven track record scaling engineering teams",
-        "1": "Build lead list of CMOs at B2B SaaS companies ($10M-$50M ARR) who recently raised Series A/B funding - include email patterns and tech stack",
-        "2": "Research Senior Blockchain Engineers with Solidity/Rust experience at top crypto projects, open to relocation to Dubai or Singapore",
-        "3": "Generate prospect list of technical founders at Seed-Series A startups in Enterprise AI who raised $2M-$15M in last 6 months",
-        "4": "Identify Senior Product Managers at fintech companies with 5-10 years experience from FAANG or unicorns, skilled in 0-1 product development",
-        "5": "Find CIOs and VP Engineering at mid-market healthcare IT companies (500-5000 employees) with $500K+ IT budgets planning cloud migration",
-        "6": "Research VP Sales at B2B SaaS companies showing 100%+ YoY growth, with 7+ years closing $100K+ deals and PLG experience",
-        "7": "Build list of CTOs at enterprise companies actively implementing AI infrastructure with multi-million dollar budgets in 2024",
-        "8": "Find Senior UX/UI Designers with mobile-first consumer app experience and 1M+ user portfolios, actively looking or open to opportunities",
-        "9": "Identify Senior DevOps Engineers at cloud-native startups with Kubernetes/Terraform expertise and 5-8 years building infrastructure for 10M+ users"
+      "canvas": {
+        "0": "Create a social media banner for my tech startup featuring a futuristic city skyline with neon accents",
+        "1": "Design a minimalist logo for a coffee brand called 'Morning Ritual' using earthy tones",
+        "2": "Edit this product photo to remove the background and add a soft gradient",
+        "3": "Create an infographic showing the benefits of renewable energy with modern flat design",
+        "4": "Design a book cover for a sci-fi novel about AI consciousness with cyberpunk aesthetics",
+        "5": "Make a YouTube thumbnail for a video about productivity tips with bold text overlay",
+        "6": "Create a mood board for a luxury fashion brand targeting millennials",
+        "7": "Design a wedding invitation with elegant floral patterns and gold accents",
+        "8": "Edit my portrait photo to have a vintage film look with grain and warm tones",
+        "9": "Create a poster design for a music festival with psychedelic 70s vibes"
+      },
+      "video": {
+        "0": "I want to create a product showcase video - I'll upload my product photo and you animate it rotating smoothly",
+        "1": "Transform my portrait into an epic adventure scene - I'll send my photo and you make me walk through a cinematic landscape",
+        "2": "Generate a nature video of cherry blossoms gently falling in a peaceful Japanese garden",
+        "3": "Create an abstract video of glowing particles swirling together and exploding outward in slow motion",
+        "4": "I have a product image - create a premium floating animation with soft shadows and subtle rotation",
+        "5": "Take my selfie and animate it with magical sparkles and cinematic lighting effects around me",
+        "6": "Generate a dramatic cinematic shot flying through misty mountains at golden hour",
+        "7": "Create a looping abstract video of liquid metal flowing and morphing into organic shapes",
+        "8": "I'll upload my photo - transform the background into an underwater scene with light rays and bubbles",
+        "9": "Generate a futuristic cityscape video with flying cars, neon lights, and rain-slicked streets"
       },
       "research": {
         "0": "Analyze emerging trends in quantum computing and potential business applications",
