--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -944,7 +944,8 @@
       "slides": "Slides",
       "data": "Datos",
       "docs": "Documentos",
-      "people": "Gente",
+      "canvas": "Lienzo",
+      "video": "Video",
       "research": "Investigación"
     },
     "styles": {
@@ -1153,17 +1154,29 @@
         "8": "Escribir un plan de respuesta a incidentes de seguridad con procedimientos de escalación",
         "9": "Crear una guía de estilo completa para marca y contenido"
       },
-      "people": {
-        "0": "Encontrar candidatos a VP de Ingeniería en startups de IA/ML Serie B+ en el área de la bahía de San Francisco con 10+ años de experiencia y historial comprobado de escalar equipos de ingeniería",
-        "1": "Construir lista de leads de CMOs en empresas B2B SaaS ($10M-$50M ARR) que recientemente levantaron financiamiento Serie A/B - incluir patrones de email y stack tecnológico",
-        "2": "Investigar Ingenieros Blockchain Senior con experiencia en Solidity/Rust en proyectos cripto de primer nivel, abiertos a reubicación a Dubái o Singapur",
-        "3": "Generar lista de prospectos de fundadores técnicos en startups Seed-Serie A en IA Empresarial que levantaron $2M-$15M en los últimos 6 meses",
-        "4": "Identificar Gerentes de Producto Senior en empresas fintech con 5-10 años de experiencia de FAANG o unicornios, hábiles en desarrollo de producto 0-1",
-        "5": "Encontrar CIOs y VP de Ingeniería en empresas de TI de salud de mercado medio (500-5000 empleados) con presupuestos de TI de $500K+ planeando migración a la nube",
-        "6": "Investigar VP de Ventas en empresas B2B SaaS mostrando crecimiento de 100%+ interanual, con 7+ años cerrando tratos de $100K+ y experiencia PLG",
-        "7": "Construir lista de CTOs en empresas empresariales implementando activamente infraestructura de IA con presupuestos multimillonarios en 2024",
-        "8": "Encontrar Diseñadores UX/UI Senior con experiencia en apps de consumidor mobile-first y portafolios de 1M+ usuarios, buscando activamente o abiertos a oportunidades",
-        "9": "Identificar Ingenieros DevOps Senior en startups cloud-native con experiencia en Kubernetes/Terraform y 5-8 años construyendo infraestructura para 10M+ usuarios"
+      "canvas": {
+        "0": "Crear un banner de redes sociales para mi startup tecnológica con un horizonte urbano futurista con acentos de neón",
+        "1": "Diseñar un logo minimalista para una marca de café llamada 'Morning Ritual' usando tonos tierra",
+        "2": "Editar esta foto de producto para eliminar el fondo y agregar un degradado suave",
+        "3": "Crear una infografía mostrando los beneficios de la energía renovable con diseño plano moderno",
+        "4": "Diseñar una portada de libro para una novela de ciencia ficción sobre conciencia de IA con estética cyberpunk",
+        "5": "Hacer una miniatura de YouTube para un video sobre consejos de productividad con superposición de texto en negrita",
+        "6": "Crear un moodboard para una marca de moda de lujo dirigida a millennials",
+        "7": "Diseñar una invitación de boda con elegantes patrones florales y acentos dorados",
+        "8": "Editar mi foto de retrato para tener un aspecto de película vintage con grano y tonos cálidos",
+        "9": "Crear un diseño de póster para un festival de música con vibras psicodélicas de los 70"
+      },
+      "video": {
+        "0": "Quiero crear un video de presentación de producto - subiré mi foto del producto y tú lo animas rotando suavemente",
+        "1": "Transforma mi retrato en una escena de aventura épica - enviaré mi foto y me haces caminar por un paisaje cinematográfico",
+        "2": "Genera un video de naturaleza de pétalos de cerezo cayendo suavemente en un pacífico jardín japonés",
+        "3": "Crea un video abstracto de partículas brillantes arremolinándose y explotando hacia afuera en cámara lenta",
+        "4": "Tengo una imagen de producto - crea una animación flotante premium con sombras suaves y rotación sutil",
+        "5": "Toma mi selfie y anímalo con destellos mágicos y efectos de iluminación cinematográfica a mi alrededor",
+        "6": "Genera una toma cinematográfica dramática volando a través de montañas neblinosas al atardecer",
+        "7": "Crea un video en bucle de metal líquido fluyendo y transformándose en formas orgánicas",
+        "8": "Subiré mi foto - transforma el fondo en una escena submarina con rayos de luz y burbujas",
+        "9": "Genera un video de paisaje urbano futurista con autos voladores, luces de neón y calles mojadas por la lluvia"
       },
       "research": {
         "0": "Analizar tendencias emergentes en computación cuántica y aplicaciones comerciales potenciales",
