--- a/frontend/translations/fr.json
+++ b/frontend/translations/fr.json
@@ -944,7 +944,8 @@
       "slides": "Slides",
       "data": "Données",
       "docs": "Documents",
-      "people": "Gens",
+      "canvas": "Toile",
+      "video": "Vidéo",
       "research": "Recherche"
     },
     "styles": {
@@ -1153,17 +1154,29 @@
         "8": "Rédiger un plan de réponse aux incidents de sécurité avec des procédures d'escalade",
         "9": "Créer un guide de style complet pour la marque et le contenu"
       },
-      "people": {
-        "0": "Trouver des candidats VP d'Ingénierie dans des startups IA/ML Série B+ de la région de la baie de San Francisco avec 10+ ans d'expérience et un historique prouvé de mise à l'échelle d'équipes d'ingénierie",
-        "1": "Construire une liste de prospects de CMO dans des entreprises B2B SaaS ($10M-$50M ARR) qui ont récemment levé des fonds Série A/B - inclure les modèles d'email et la stack technologique",
-        "2": "Rechercher des Ingénieurs Blockchain Senior avec expérience Solidity/Rust dans des projets crypto de premier plan, ouverts à la réinstallation à Dubaï ou Singapour",
-        "3": "Générer une liste de prospects de fondateurs techniques dans des startups Seed-Série A en IA d'entreprise qui ont levé $2M-$15M au cours des 6 derniers mois",
-        "4": "Identifier des Product Managers Senior dans des entreprises fintech avec 5-10 ans d'expérience de FAANG ou de licornes, compétents en développement de produit 0-1",
-        "5": "Trouver des CIO et VP d'Ingénierie dans des entreprises de TI de santé de marché moyen (500-5000 employés) avec des budgets TI de $500K+ planifiant une migration cloud",
-        "6": "Rechercher des VP Ventes dans des entreprises B2B SaaS affichant une croissance de 100%+ en glissement annuel, avec 7+ ans de clôture de transactions de $100K+ et expérience PLG",
-        "7": "Construire une liste de CTO dans des entreprises qui mettent activement en œuvre une infrastructure IA avec des budgets multi-millions en 2024",
-        "8": "Trouver des Designers UX/UI Senior avec expérience d'apps consommateurs mobile-first et portefeuilles de 1M+ utilisateurs, recherchant activement ou ouverts aux opportunités",
-        "9": "Identifier des Ingénieurs DevOps Senior dans des startups cloud-native avec expertise Kubernetes/Terraform et 5-8 ans de construction d'infrastructure pour 10M+ utilisateurs"
+      "canvas": {
+        "0": "Créer une bannière de réseaux sociaux pour ma startup tech avec un horizon urbain futuriste et des accents néon",
+        "1": "Concevoir un logo minimaliste pour une marque de café appelée 'Morning Ritual' avec des tons terreux",
+        "2": "Modifier cette photo de produit pour supprimer l'arrière-plan et ajouter un dégradé doux",
+        "3": "Créer une infographie montrant les avantages de l'énergie renouvelable avec un design plat moderne",
+        "4": "Concevoir une couverture de livre pour un roman de science-fiction sur la conscience de l'IA avec une esthétique cyberpunk",
+        "5": "Faire une miniature YouTube pour une vidéo sur les conseils de productivité avec une superposition de texte en gras",
+        "6": "Créer un moodboard pour une marque de mode de luxe ciblant les millennials",
+        "7": "Concevoir un faire-part de mariage avec des motifs floraux élégants et des accents dorés",
+        "8": "Modifier ma photo portrait pour avoir un look film vintage avec du grain et des tons chauds",
+        "9": "Créer un design d'affiche pour un festival de musique avec des vibrations psychédéliques des années 70"
+      },
+      "video": {
+        "0": "Je veux créer une vidéo de présentation produit - je téléchargerai ma photo de produit et tu l'animes en rotation douce",
+        "1": "Transforme mon portrait en une scène d'aventure épique - j'enverrai ma photo et tu me fais marcher dans un paysage cinématique",
+        "2": "Génère une vidéo nature de pétales de cerisier tombant doucement dans un paisible jardin japonais",
+        "3": "Crée une vidéo abstraite de particules lumineuses tourbillonnant ensemble et explosant vers l'extérieur au ralenti",
+        "4": "J'ai une image de produit - crée une animation flottante premium avec des ombres douces et une rotation subtile",
+        "5": "Prends mon selfie et anime-le avec des étincelles magiques et des effets d'éclairage cinématique autour de moi",
+        "6": "Génère un plan cinématique dramatique volant à travers des montagnes brumeuses à l'heure dorée",
+        "7": "Crée une vidéo en boucle de métal liquide coulant et se transformant en formes organiques",
+        "8": "Je téléchargerai ma photo - transforme l'arrière-plan en une scène sous-marine avec des rayons de lumière et des bulles",
+        "9": "Génère une vidéo de paysage urbain futuriste avec des voitures volantes, des néons et des rues mouillées par la pluie"
       },
       "research": {
         "0": "Analyser les tendances émergentes en informatique quantique et les applications commerciales potentielles",
