feat: implement video generation restrictions for free-tier users and enhance user tier checks

--- a/frontend/translations/de.json
+++ b/frontend/translations/de.json
@@ -1078,16 +1078,16 @@
         "9": "Erstelle ein Posterdesign für ein Musikfestival im psychedelischen 70er-Jahre-Stil"
       },
       "video": {
-        "0": "Ich möchte ein Produktvideo erstellen - ich lade mein Produktfoto hoch und du animierst es mit sanfter Rotation",
-        "1": "Verwandle mein Porträt in eine epische Abenteuerszene - ich sende mein Foto und du lässt mich durch eine cinematische Landschaft laufen",
-        "2": "Generiere ein Naturvideo von sanft fallenden Kirschblüten in einem friedlichen japanischen Garten",
-        "3": "Erstelle ein abstraktes Video von leuchtenden Partikeln, die sich zusammenwirbeln und in Zeitlupe nach außen explodieren",
-        "4": "Ich habe ein Produktbild - erstelle eine Premium-Schwebeanimation mit weichen Schatten und subtiler Rotation",
-        "5": "Nimm mein Selfie und animiere es mit magischen Funken und cinematischen Lichteffekten um mich herum",
-        "6": "Generiere eine dramatische cinematische Aufnahme, die durch neblige Berge bei Sonnenuntergang fliegt",
-        "7": "Erstelle ein Loop-Video von flüssigem Metall, das fließt und sich in organische Formen verwandelt",
-        "8": "Ich lade mein Foto hoch - verwandle den Hintergrund in eine Unterwasserszene mit Lichtstrahlen und Blasen",
-        "9": "Generiere ein futuristisches Stadtbild-Video mit fliegenden Autos, Neonlichtern und regennassen Straßen"
+        "0": "Animiere mein Produktfoto mit sanfter Rotation und Studiobeleuchtung",
+        "1": "Verwandle mein Porträt in eine cinematische Szene mit Kamerabewegung",
+        "2": "Generiere ein Naturvideo von langsam fallenden Kirschblüten",
+        "3": "Erstelle leuchtende Partikel die zusammen wirbeln in Zeitlupe",
+        "4": "Mein Produkt schwebend und rotierend mit weichen Schatten",
+        "5": "Füge dramatische Beleuchtung und Farbkorrektur zu meinem Porträt hinzu",
+        "6": "Generiere einen Drohnenflug durch neblige Berggipfel",
+        "7": "Erstelle ein Loop-Video von flüssigem Metall in organischen Formen",
+        "8": "Verwandle meinen Fotohintergrund in Unterwasser mit Lichtstrahlen",
+        "9": "Generiere eine futuristische Stadtansicht mit Neonlichtern und Reflexionen"
       },
       "research": {
         "0": "Analysiere aufkommende Trends im Quantencomputing und potenzielle Geschäftsanwendungen",
