--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -1175,16 +1175,16 @@
         "9": "Create a poster design for a music festival with psychedelic 70s vibes"
       },
       "video": {
-        "0": "I want to create a product showcase video - I'll upload my product photo and you animate it rotating smoothly",
-        "1": "Transform my portrait into an epic adventure scene - I'll send my photo and you make me walk through a cinematic landscape",
-        "2": "Generate a nature video of cherry blossoms gently falling in a peaceful Japanese garden",
-        "3": "Create an abstract video of glowing particles swirling together and exploding outward in slow motion",
-        "4": "I have a product image - create a premium floating animation with soft shadows and subtle rotation",
-        "5": "Take my selfie and animate it with magical sparkles and cinematic lighting effects around me",
-        "6": "Generate a dramatic cinematic shot flying through misty mountains at golden hour",
-        "7": "Create a looping abstract video of liquid metal flowing and morphing into organic shapes",
-        "8": "I'll upload my photo - transform the background into an underwater scene with light rays and bubbles",
-        "9": "Generate a futuristic cityscape video with flying cars, neon lights, and rain-slicked streets"
+        "0": "Animate my product photo rotating smoothly with studio lighting",
+        "1": "Transform my portrait into a cinematic scene with camera movement",
+        "2": "Generate a peaceful nature video of cherry blossoms falling slowly",
+        "3": "Create abstract glowing particles swirling together in slow motion",
+        "4": "Make my product float and rotate with soft shadows and reflections",
+        "5": "Add dramatic cinematic lighting and color grading to my portrait",
+        "6": "Generate a smooth drone shot flying through foggy mountain peaks",
+        "7": "Create a looping video of liquid metal flowing into organic shapes",
+        "8": "Transform my photo background into an underwater scene with light rays",
+        "9": "Generate a futuristic cityscape video with neon lights and reflections"
       },
       "research": {
         "0": "Analyze emerging trends in quantum computing and potential business applications",
