--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -1167,16 +1167,16 @@
         "9": "Crear un diseño de póster para un festival de música con vibras psicodélicas de los 70"
       },
       "video": {
-        "0": "Quiero crear un video de presentación de producto - subiré mi foto del producto y tú lo animas rotando suavemente",
-        "1": "Transforma mi retrato en una escena de aventura épica - enviaré mi foto y me haces caminar por un paisaje cinematográfico",
-        "2": "Genera un video de naturaleza de pétalos de cerezo cayendo suavemente en un pacífico jardín japonés",
-        "3": "Crea un video abstracto de partículas brillantes arremolinándose y explotando hacia afuera en cámara lenta",
-        "4": "Tengo una imagen de producto - crea una animación flotante premium con sombras suaves y rotación sutil",
-        "5": "Toma mi selfie y anímalo con destellos mágicos y efectos de iluminación cinematográfica a mi alrededor",
-        "6": "Genera una toma cinematográfica dramática volando a través de montañas neblinosas al atardecer",
-        "7": "Crea un video en bucle de metal líquido fluyendo y transformándose en formas orgánicas",
-        "8": "Subiré mi foto - transforma el fondo en una escena submarina con rayos de luz y burbujas",
-        "9": "Genera un video de paisaje urbano futurista con autos voladores, luces de neón y calles mojadas por la lluvia"
+        "0": "Anima mi foto de producto rotando suavemente con iluminación de estudio",
+        "1": "Transforma mi retrato en una escena cinematográfica con movimiento de cámara",
+        "2": "Genera un video de naturaleza con pétalos de cerezo cayendo lentamente",
+        "3": "Crea partículas brillantes arremolinándose juntas en cámara lenta",
+        "4": "Haz flotar mi producto rotando con sombras suaves y reflejos",
+        "5": "Añade iluminación dramática y gradación de color a mi retrato",
+        "6": "Genera un vuelo de dron suave a través de picos montañosos brumosos",
+        "7": "Crea un video en bucle de metal líquido fluyendo en formas orgánicas",
+        "8": "Transforma el fondo de mi foto en una escena submarina con rayos de luz",
+        "9": "Genera un video de paisaje urbano futurista con luces neón y reflejos"
       },
       "research": {
         "0": "Analizar tendencias emergentes en computación cuántica y aplicaciones comerciales potenciales",
