--- a/frontend/translations/fr.json
+++ b/frontend/translations/fr.json
@@ -1167,16 +1167,16 @@
         "9": "Créer un design d'affiche pour un festival de musique avec des vibrations psychédéliques des années 70"
       },
       "video": {
-        "0": "Je veux créer une vidéo de présentation produit - je téléchargerai ma photo de produit et tu l'animes en rotation douce",
-        "1": "Transforme mon portrait en une scène d'aventure épique - j'enverrai ma photo et tu me fais marcher dans un paysage cinématique",
-        "2": "Génère une vidéo nature de pétales de cerisier tombant doucement dans un paisible jardin japonais",
-        "3": "Crée une vidéo abstraite de particules lumineuses tourbillonnant ensemble et explosant vers l'extérieur au ralenti",
-        "4": "J'ai une image de produit - crée une animation flottante premium avec des ombres douces et une rotation subtile",
-        "5": "Prends mon selfie et anime-le avec des étincelles magiques et des effets d'éclairage cinématique autour de moi",
-        "6": "Génère un plan cinématique dramatique volant à travers des montagnes brumeuses à l'heure dorée",
-        "7": "Crée une vidéo en boucle de métal liquide coulant et se transformant en formes organiques",
-        "8": "Je téléchargerai ma photo - transforme l'arrière-plan en une scène sous-marine avec des rayons de lumière et des bulles",
-        "9": "Génère une vidéo de paysage urbain futuriste avec des voitures volantes, des néons et des rues mouillées par la pluie"
+        "0": "Anime ma photo produit en rotation douce avec éclairage studio",
+        "1": "Transforme mon portrait en scène cinématique avec mouvement de caméra",
+        "2": "Génère une vidéo nature de pétales de cerisier tombant lentement",
+        "3": "Crée des particules lumineuses tourbillonnant ensemble au ralenti",
+        "4": "Fais flotter mon produit en rotation avec ombres douces et reflets",
+        "5": "Ajoute un éclairage dramatique et étalonnage couleur à mon portrait",
+        "6": "Génère un vol de drone fluide à travers des sommets montagneux brumeux",
+        "7": "Crée une vidéo en boucle de métal liquide coulant en formes organiques",
+        "8": "Transforme l'arrière-plan de ma photo en scène sous-marine avec rayons lumineux",
+        "9": "Génère une vidéo de paysage urbain futuriste avec néons et reflets"
       },
       "research": {
         "0": "Analyser les tendances émergentes en informatique quantique et les applications commerciales potentielles",
