--- a/frontend/translations/it.json
+++ b/frontend/translations/it.json
@@ -1080,16 +1080,16 @@
         "9": "Crea un design poster per un festival musicale con vibrazioni psichedeliche anni '70"
       },
       "video": {
-        "0": "Voglio creare un video di presentazione prodotto - caricherò la mia foto del prodotto e tu la animi ruotando dolcemente",
-        "1": "Trasforma il mio ritratto in una scena di avventura epica - invierò la mia foto e tu mi fai camminare attraverso un paesaggio cinematico",
-        "2": "Genera un video naturale di petali di ciliegio che cadono dolcemente in un tranquillo giardino giapponese",
-        "3": "Crea un video astratto di particelle luminose che turbinano insieme ed esplodono verso l'esterno al rallentatore",
-        "4": "Ho un'immagine del prodotto - crea un'animazione fluttuante premium con ombre morbide e rotazione sottile",
-        "5": "Prendi il mio selfie e animalo con scintille magiche ed effetti di illuminazione cinematica intorno a me",
-        "6": "Genera una ripresa cinematica drammatica che vola attraverso montagne nebbiose all'ora dorata",
-        "7": "Crea un video in loop di metallo liquido che scorre e si trasforma in forme organiche",
-        "8": "Caricherò la mia foto - trasforma lo sfondo in una scena sottomarina con raggi di luce e bolle",
-        "9": "Genera un video di paesaggio urbano futuristico con auto volanti, luci al neon e strade bagnate dalla pioggia"
+        "0": "Anima la mia foto prodotto ruotando dolcemente con illuminazione da studio",
+        "1": "Trasforma il mio ritratto in una scena cinematica con movimento camera",
+        "2": "Genera un video naturale di petali di ciliegio che cadono lentamente",
+        "3": "Crea particelle luminose che turbinano insieme al rallentatore",
+        "4": "Fai fluttuare il mio prodotto ruotando con ombre morbide e riflessi",
+        "5": "Aggiungi illuminazione drammatica e correzione colore al mio ritratto",
+        "6": "Genera un volo drone fluido attraverso cime montuose nebbiose",
+        "7": "Crea un video loop di metallo liquido che scorre in forme organiche",
+        "8": "Trasforma lo sfondo della mia foto in scena sottomarina con raggi di luce",
+        "9": "Genera un video paesaggio urbano futuristico con luci neon e riflessi"
       },
       "research": {
         "0": "Analizza le tendenze emergenti nel quantum computing e le potenziali applicazioni aziendali",
