--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -1167,16 +1167,16 @@
         "9": "70年代のサイケデリックな雰囲気の音楽フェスティバルのポスターデザインを作成"
       },
       "video": {
-        "0": "製品ショーケースビデオを作りたい - 製品写真をアップロードするので、滑らかに回転するアニメーションにして",
-        "1": "私のポートレートを壮大な冒険シーンに変換して - 写真を送るので、シネマティックな風景を歩く私を作って",
-        "2": "平和な日本庭園で優しく舞い散る桜の花びらの自然ビデオを生成",
-        "3": "光るパーティクルが渦を巻いてスローモーションで外側に爆発する抽象ビデオを作成",
-        "4": "製品画像があります - ソフトな影と微妙な回転のプレミアムフローティングアニメーションを作成して",
-        "5": "私のセルフィーを取って、周りに魔法の輝きとシネマティックな照明効果でアニメーション化して",
-        "6": "ゴールデンアワーの霧深い山々を飛行するドラマチックなシネマティックショットを生成",
-        "7": "有機的な形状に流れて変形する液体金属のループビデオを作成",
-        "8": "私の写真をアップロードします - 背景を光線と泡のある水中シーンに変換して",
-        "9": "飛行する車、ネオンライト、雨に濡れた通りのある未来都市のビデオを生成"
+        "0": "製品写真をスタジオ照明で滑らかに回転アニメーション",
+        "1": "ポートレートをカメラ動きのあるシネマティックシーンに変換",
+        "2": "ゆっくり舞い散る桜の花びらの自然ビデオを生成",
+        "3": "スローモーションで渦巻く光るパーティクルを作成",
+        "4": "柔らかい影と反射で製品を浮かせて回転させる",
+        "5": "ポートレートにドラマチックな照明とカラーグレーディングを追加",
+        "6": "霧深い山頂を飛ぶスムーズなドローンショットを生成",
+        "7": "有機的な形に流れる液体金属のループビデオを作成",
+        "8": "写真の背景を光線のある水中シーンに変換",
+        "9": "ネオンライトと反射のある未来都市ビデオを生成"
       },
       "research": {
         "0": "量子コンピューティングの新興トレンドと潜在的なビジネスアプリケーションを分析",
