--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -1167,16 +1167,16 @@
         "9": "为音乐节创建带有 70 年代迷幻氛围的海报设计"
       },
       "video": {
-        "0": "我想创建一个产品展示视频 - 我会上传产品照片，你将其动画化平滑旋转",
-        "1": "将我的肖像转换为史诗冒险场景 - 我会发送我的照片，你让我走过电影般的风景",
-        "2": "生成樱花花瓣在宁静日本花园中轻轻飘落的自然视频",
-        "3": "创建发光粒子旋转在一起并以慢动作向外爆炸的抽象视频",
-        "4": "我有产品图片 - 创建带有柔和阴影和微妙旋转的高级悬浮动画",
-        "5": "拍下我的自拍并用魔法火花和电影般的灯光效果在我周围制作动画",
-        "6": "生成在黄金时刻飞越雾蒙蒙山脉的戏剧性电影镜头",
-        "7": "创建液态金属流动并变形为有机形状的循环视频",
-        "8": "我会上传我的照片 - 将背景转换为带有光线和气泡的水下场景",
-        "9": "生成带有飞行汽车、霓虹灯和雨湿街道的未来城市景观视频"
+        "0": "用工作室灯光将我的产品照片平滑旋转动画化",
+        "1": "将我的肖像转换为带有相机运动的电影场景",
+        "2": "生成樱花花瓣缓缓飘落的自然视频",
+        "3": "创建慢动作旋转在一起的发光粒子",
+        "4": "让我的产品带柔和阴影和反射漂浮旋转",
+        "5": "为我的肖像添加戏剧性灯光和调色",
+        "6": "生成飞越雾蒙山峰的流畅无人机镜头",
+        "7": "创建液态金属流入有机形状的循环视频",
+        "8": "将我照片的背景转换为带光线的水下场景",
+        "9": "生成带霓虹灯和反射的未来城市景观视频"
       },
       "research": {
         "0": "分析量子计算的新兴趋势和潜在商业应用",
