--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -1167,16 +1167,16 @@
         "9": "Criar um design de pôster para um festival de música com vibrações psicodélicas dos anos 70"
       },
       "video": {
-        "0": "Quero criar um vídeo de apresentação de produto - vou enviar minha foto do produto e você anima girando suavemente",
-        "1": "Transforme meu retrato em uma cena de aventura épica - enviarei minha foto e você me faz caminhar por uma paisagem cinematográfica",
-        "2": "Gere um vídeo de natureza de pétalas de cerejeira caindo suavemente em um pacífico jardim japonês",
-        "3": "Crie um vídeo abstrato de partículas brilhantes girando juntas e explodindo para fora em câmera lenta",
-        "4": "Tenho uma imagem de produto - crie uma animação flutuante premium com sombras suaves e rotação sutil",
-        "5": "Pegue minha selfie e anime com brilhos mágicos e efeitos de iluminação cinematográfica ao meu redor",
-        "6": "Gere uma tomada cinematográfica dramática voando através de montanhas enevoadas na hora dourada",
-        "7": "Crie um vídeo em loop de metal líquido fluindo e se transformando em formas orgânicas",
-        "8": "Vou enviar minha foto - transforme o fundo em uma cena subaquática com raios de luz e bolhas",
-        "9": "Gere um vídeo de paisagem urbana futurista com carros voadores, luzes de neon e ruas molhadas pela chuva"
+        "0": "Anime minha foto de produto girando suavemente com iluminação de estúdio",
+        "1": "Transforme meu retrato em uma cena cinematográfica com movimento de câmera",
+        "2": "Gere um vídeo de natureza com pétalas de cerejeira caindo lentamente",
+        "3": "Crie partículas brilhantes girando juntas em câmera lenta",
+        "4": "Faça meu produto flutuar girando com sombras suaves e reflexos",
+        "5": "Adicione iluminação dramática e correção de cor ao meu retrato",
+        "6": "Gere um voo de drone suave através de picos montanhosos enevoados",
+        "7": "Crie um vídeo em loop de metal líquido fluindo em formas orgânicas",
+        "8": "Transforme o fundo da minha foto em cena subaquática com raios de luz",
+        "9": "Gere um vídeo de paisagem urbana futurista com luzes neon e reflexos"
       },
       "research": {
         "0": "Analisar tendências emergentes em computação quântica e aplicações comerciais potenciais",
